# folio

./: .gitignore  Makefile  README.md  build_pyz.py  folio.in  meson.build  pyproject.toml  run
build-aux/: check_version.py  install_python_tree.py  test_check_version.py
data/: io.github.rand_byte.Folio.desktop  io.github.rand_byte.Folio.metainfo.xml
debian/: changelog  control  copyright  folio.1  manpages  rules
notes_app/: README.md  __init__.py  __main__.py  enums.py
notes_app/asciidoc/: __init__.py  ast.py  inline_parser.py  language_spec.lang  lexer.py  parser.py  summary.py  tag_table.py  test_ast.py  test_inline_parser.py  test_lexer.py  test_parser.py  test_summary.py  test_tag_table.py  test_textbuffer_renderer.py  textbuffer_renderer.py
notes_app/config/: __init__.py  defaults.py  paths.py  test_paths.py
notes_app/controllers/: __init__.py  _storage_errors.py  app_state.py  note_controller.py  notebook_controller.py  test__storage_errors.py  test_app_state.py  test_note_controller.py  test_notebook_controller.py
notes_app/models/: attachment.py  note.py  notebook.py  parse_error.py  test_attachment.py  test_note.py  test_notebook.py
notes_app/search/: note_filter.py  test_note_filter.py
notes_app/storage/: __init__.py  _notebook_writes.py  attachment_store.py  migrations.py  note_repository.py  notebook_repository.py  protocols.py  test_attachment_store.py  test_database.py  test_migrations.py  test_note_repository.py  test_notebook_repository.py  test_protocols.py
notes_app/ui/: __init__.py  _image_picker.py  application.py  dialogs.py  language_spec.lang  link_handler.py  main_window.py  note_editor.py  note_list.py  note_view.py  sidebar.py  test__image_picker.py  test_dialogs.py  test_link_handler.py  test_main_window.py  test_note_editor.py  test_note_list.py  test_note_view.py  test_sidebar.py  test_toolbar.py  toolbar.py
notes_app/ui/css/: app.css
notes_app/ui/note_render/: __init__.py  test_tag_table.py  test_textbuffer_renderer.py  textbuffer_renderer.py
src/: README.md  __main__.py  enums.py
src/asciidoc/: __init__.py  ast.py  inline_parser.py  lexer.py  parser.py  summary.py  test_ast.py  test_inline_parser.py  test_lexer.py  test_parser.py  test_summary.py
src/config/: defaults.py  paths.py  test_paths.py
src/controllers/: __init__.py  app_state.py  note_controller.py  notebook_controller.py  test__storage_errors.py  test_app_state.py  test_note_controller.py  test_notebook_controller.py
src/giruntime/: __init__.py
src/giruntime/controllers/: app_state.py  note_controller.py  note_item.py  note_list_store.py  tag_counts_model.py  test__storage_errors.py  test_app_state.py  test_note_controller.py  test_note_list_store.py  test_tag_counts_model.py
src/giruntime/ui/: __init__.py  _dates.py  _file_picker.py  _filesize.py  _gresource.py  _image_picker.py  application.py  attachments_panel.py  dialogs.py  folio.gresource.xml  help_window.py  language_spec.lang  link_handler.py  main_window.py  note_editor.py  note_list.py  note_view.py  sidebar.py  test__dates.py  test__file_picker.py  test__filesize.py  test__gresource.py  test__image_picker.py  test_application.py  test_attachments_panel.py  test_dialogs.py  test_help_window.py  test_link_handler.py  test_main_window.py  test_note_editor.py  test_note_list.py  test_note_view.py  test_sidebar.py  test_toolbar.py  toolbar.py
src/giruntime/ui/css/: app.css
src/giruntime/ui/icons/: .gitkeep
src/giruntime/ui/note_render/: attachment_table.py  tag_table.py  test_attachment_table.py  test_tag_table.py  test_textbuffer_renderer.py  textbuffer_renderer.py
src/models/: __init__.py  attachment.py  note.py  notebook.py  parse_error.py  session_state.py  test_attachment.py  test_note.py  test_notebook.py
src/search/: __init__.py  note_filter.py  test_note_filter.py
src/storage/: __init__.py  _notebook_writes.py  attachment_store.py  database.py  migrations.py  note_repository.py  notebook_repository.py  protocols.py  session_state_store.py  test_attachment_store.py  test_database.py  test_migrations.py  test_note_repository.py  test_notebook_repository.py  test_protocols.py  test_session_state_store.py
src/system_docs/: __init__.py  help.adoc  test___init__.py  welcome.adoc
src/ui/: _image_picker.py  application.py  dialogs.py  folio.gresource  folio.gresource.xml  link_handler.py  main_window.py  note_editor.py  note_list.py  note_view.py  sidebar.py  test__dates.py  test__image_picker.py  test_dialogs.py  test_link_handler.py  test_main_window.py  test_note_editor.py  test_note_list.py  test_note_view.py  test_sidebar.py  test_toolbar.py  toolbar.py
src/ui/css/: .gitkeep  app.css
src/ui/note_render/: __init__.py  tag_table.py  test_tag_table.py  test_textbuffer_renderer.py  textbuffer_renderer.py
tests/fixtures/: Sourdough_country_loaf.txt
