[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-app"
version = "0.1.0"
description = "AsciiDoc note-taking application"
requires-python = ">=3.13"
readme = "README.md"

# Runtime dependencies. ``PyGObject`` is the Python-side binding for
# GTK 4 (build step 8 onwards) and GtkSourceView 5 (build step 10
# onwards); both typelibs are system packages. On Debian/Ubuntu the
# packages are ``gir1.2-gtk-4.0`` and ``gir1.2-gtksource-5``;
# equivalents exist on other distributions. SQLite is in the standard
# library.
dependencies = [
    "PyGObject>=3.50",
]

[project.scripts]
notes-app = "notes_app.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["notes_app*"]

# The bundled GtkSourceView language definition is loaded at runtime
# by :mod:`notes_app.ui.note_editor`. Listing it here ensures it ships
# in the wheel alongside the Python sources rather than being silently
# dropped by the default include rules. Application CSS and SVG
# assets that already lived under ``ui/css`` and ``ui/icons`` are
# included by the same mechanism.
[tool.setuptools.package-data]
notes_app = [
    "ui/language_spec.lang",
    "ui/css/*.css",
    "ui/icons/*.svg",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-arguments",
]
enable = ["useless-suppression"]

[tool.pylint.design]
min-public-methods = 1

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

incremental = false
cache_dir = "/dev/null"

# PyGObject does not ship type stubs or a ``py.typed`` marker, so
# ``from gi.repository import Gtk`` always trips mypy's import-untyped
# check. The override below is project-wide so each future module that
# refers to GTK does not need a per-file ``# type: ignore`` comment.
# This is configuration of the type checker — not suppression of real
# type errors in our own code.
[[tool.mypy.overrides]]
module = ["gi.*"]
ignore_missing_imports = true
