[project]
name = "folio"
version = "0.1.0"
description = "AsciiDoc note-taking application"
requires-python = ">=3.13"
readme = "src/README.md"

# Runtime dependencies. ``PyGObject`` is the Python-side binding for
# GTK 4 and GtkSourceView 5; both typelibs are system packages. On
# Debian/Ubuntu the packages are ``gir1.2-gtk-4.0`` and
# ``gir1.2-gtksource-5`` (GtkSourceView >= 5.4 — see the README's
# Packaging notes); equivalents exist on other distributions. SQLite is
# in the standard library. The app is distributed as a zipapp
# (``folio.pyz``), so there is no build backend, console script, or
# wheel-packaging configuration here — only project metadata and tool
# config.
dependencies = [
    "PyGObject>=3.50",
]

# Dev-tooling declaration (PEP 735 dependency group — tool-agnostic and
# build-backend-free, so it fits the zipapp project without introducing a
# build system). These are NOT runtime dependencies; they are the
# type-checker and linter the ``type`` / ``lint`` Makefile targets invoke.
#
# ``mypy >= 1.16`` is the recorded minimum: earlier releases mis-widened
# ``StrEnum`` members to the ``str`` mixin when an enum class was passed to
# builtins typed ``Iterable[_T]`` (``enumerate``/``list``) — see
# python/mypy#18587, fixed in 1.16. Below that floor ``make type`` reports
# spurious ``NotebookIcon``-vs-``str`` errors in ``giruntime/ui/dialogs.py`` and
# ``giruntime/ui/test_dialogs.py``; pinning the floor keeps it from regressing.
[dependency-groups]
dev = [
    "mypy>=1.16",
    "pylint",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-many-arguments",
]
enable = ["useless-suppression"]

[tool.pylint.design]
min-public-methods = 1

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

incremental = false
cache_dir = "/dev/null"

# ``src`` is the source root but not an importable package (it has no
# ``__init__.py``), so its top-level modules (``config``, ``enums``, …) are
# imported by their bare names, while the GI-dependent layers live under
# the real ``giruntime`` package discovered beneath it. These two keys
# tell mypy to treat ``src`` as the import base and to allow package-less
# top-level modules, avoiding spurious duplicate-module /
# "not in a package" errors.
mypy_path = "src"
explicit_package_bases = true

# PyGObject does not ship type stubs or a ``py.typed`` marker, so
# ``from gi.repository import Gtk`` always trips mypy's import-untyped
# check. The override below is project-wide so each future module that
# refers to GTK does not need a per-file ``# type: ignore`` comment.
# This is configuration of the type checker — not suppression of real
# type errors in our own code.
[[tool.mypy.overrides]]
module = ["gi.*"]
ignore_missing_imports = true
